Moved page refresh rate and request timeout to environment variable and fixed modal body text overflow

--- a/app/static/css/monitor.css
+++ b/app/static/css/monitor.css
@@ -25,3 +25,7 @@ img {
     display: flex;
     align-items: center;
 }
+
+.modalBody {
+    overflow-wrap: break-word;
+}
